export const APP_ICON =
  'https://i.ibb.co/FDVhD0J/Screenshot-2024-04-30-134547.png';

export const SERVICE_NAME = {
  NOTIFICATIONS: 'notifications',
  AUTH: 'auth',
  GIG: 'gig',
  MESSAGE: 'message',
  REVIEW: 'review',
  ORDER: 'order',
  SELLER: 'seller',
  SEARCH: 'search',
  USER: 'user',
};

export const EMAIL_TEMPLATES_NAME = {
  FORGOT_PASSWORD: 'forgot-password',
  OFFER: 'offer',
  ORDER_DELIVERED: 'order-delivered',
  ORDER_EXTENSION_APPROVAL: 'order-extension-approval',
  ORDER_EXTENSION: 'order-extension',
  ORDER_PLACED: 'order-placed',
  ORDER_RECEIPT: 'order-receipt',
  RESET_PASSWORD_SUCCESS: 'reset-password-success',
  VERIFY_EMAIL: 'verify-email',
};

export const PROTOBUF_PACKAGE = {
  AUTH: 'auth',
  GIG: 'gig',
  MESSAGE: 'message',
  REVIEW: 'review',
  ORDER: 'order',
  SELLER: 'seller',
  SEARCH: 'search',
};
export const EMPTY_NUMBER = -1;
export const EMPTY_STRING = '';
export const DEFAULT_SIZE = 10;
export const EVENTS_HTTP = {
  SEARCH_GIGS: 'search-gigs',
  MORE_LIKE_THIS: 'more-like-this',
  SEED_GIG: 'seed-gig',
  GET_INACTIVE_GIG_BY_USER_ID: 'get-inactive-gig-by-user-id',
  GET_ACTIVE_GIG_BY_USER_ID: 'get-active-gig-by-user-id',
  GET_GIG_BY_ID: 'get-gig-by-id',
  CREATE_GIG: 'create-gig',
  DELETE_GIG: 'delete-gig',
  UPDATE_GIG: 'update-gig',
  UPDATE_GIG_STATUS: 'update-gig-status',
};
